# esp-idf-wakaama

./: log.txt  sdkconfig  sdkconfig.old
components/wakaama/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c  udp_client.c
main/client/: m2m_platform.c  m2m_platform.h
main/lightclient/: lightclient.c
